--- a/src/main/webapp/scripts/app/entities/apuestaRealizadas/apuestaRealizadas-detail.html
+++ b/src/main/webapp/scripts/app/entities/apuestaRealizadas/apuestaRealizadas-detail.html
@@ -44,6 +44,14 @@
             </tr>
             <tr>
                 <td>
+                    <span translate="ibookioauth2App.apuestaRealizadas.estado">Estado</span>
+                </td>
+                <td>
+                    <span class="form-control-static">{{apuestaRealizadas.estado}}</span>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <span translate="ibookioauth2App.apuestaRealizadas.aApostador">aApostador</span>
                 </td>
                 <td>
