--- a/src/main/webapp/scripts/app/entities/apuestaRealizadas/apuestaRealizadas-dialog.html
+++ b/src/main/webapp/scripts/app/entities/apuestaRealizadas/apuestaRealizadas-dialog.html
@@ -77,6 +77,18 @@
                 </p>
             </div>
         </div>
+        <div class="form-group">
+            <label class="control-label" translate="ibookioauth2App.apuestaRealizadas.estado" for="field_estado">Estado</label>
+            <input type="checkbox" class="form-control" name="estado" id="field_estado"
+                    ng-model="apuestaRealizadas.estado"
+                     />
+            <div ng-show="editForm.estado.$invalid">
+                <p class="help-block"
+                    ng-show="editForm.estado.$error.required" translate="entity.validation.required">
+                    This field is required.
+                </p>
+            </div>
+        </div>
 
         <div class="form-group">
             <label translate="ibookioauth2App.apuestaRealizadas.aApostador" for="field_aApostador">aApostador</label>
